WIP: Use two list comparison to determin sent notifications